--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,7 @@
 .idea/
 upload/
 vendor/
-include/config/DBSettings.php
 assets/__MACOSX/
 assets/plugins/
-include/config/DBSettings.php
-include/config/DBSettings.php
+include/config/
 current.log
-include/config/DBSettings.php
