--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"require": {
-		"aws/aws-sdk-php": "^3.67",
+		"aws/aws-sdk-php": "3.67",
 		"psr/simple-cache": "1.0.1",
 		"phpoffice/phpspreadsheet": "1.4.0",
 		"markbaker/complex": "1.4.6",
